# flakes

./: .gitignore  README.md
_docs/: python.md
_docs/templates/nix/python/: default.nix
crossplane-migrator/: flake.nix
eve/: README.md  pyproject.toml
eve/src/eve/: main.py
ez2/: README.md  flake.nix  pyproject.toml
ez2/src/ez2/: main.py  old.py.bak
fim/: .envrc  README.md  default.nix  main.py  pyproject.toml
fim/src/fim/: main.py
fkc/: context.sh
fws/: README.md  flake.nix  pyproject.toml
fws/fws/: main.py
fzf-k8s/: go.mod  go.sum  main.go
gla/: README.md  pyproject.toml
gla/gla/: main.py
iamlive/: flake.nix
kfc/: context.sh  flake.nix  kfc.sh
langc/: .envrc  README.md  default.nix  main.py  requirements.txt
langc-gpt-twit/: .envrc  README.md  default.nix  main.py  requirements.txt
python/: README.md
python/boto/: README.md  flake.nix  pyproject.toml
python/boto/boto/: main.py  scratch.py
python/fws/fws/: main.py
python/ratata/: flake.nix  pyproject.toml
python/ratata/ratata/: main.py
ratata/ratata/: main.py
state-crawler/: default.nix  requirements.txt
tport/: default.nix  main.py  requirements.txt  resource_schemas.py  versions.tf
