
[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.poetry]
name = "fim"
version = "0.1.0"
description = ""
authors = [ "Pablo Rojas Rivera <pablorojas@cencosud.cl>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "fim"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.142"

[tool.poetry.scripts]
main = "fim.main:main"
