[tool.poetry]
name = "fws"
version = "0.1.0"
description = ""
authors = ["Pablo Rojas Rivera <rivera.pablo1090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.99"
toml = "^0.10.2"

[tool.poetry.scripts]
fws  = "fws.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
