[tool.poetry]
name = "gla"
version = "0.1.0"
description = ""
authors = ["Pablo Rojas Rivera <pablorojas@cencosud.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-gitlab = "^3.14.0"
python-dotenv = "1.0.0"

[tool.poetry.scripts]
gla  = "gla.main:main"

# necessary for the lsp to take the external dependencies into account
[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
